--- a/didattica.html
+++ b/didattica.html
@@ -8,6 +8,13 @@
     href = "http://www.mauriziominieri.it/static/2020/img/icons/logoM.png"
     type = "image/x-icon">
 
+
+
+
+
+
+
+
    <!--PER LE TRE LINGUETTE-->
     <style>
     body {font-family: Arial;}
@@ -111,27 +118,63 @@
 
 
 
-    <meta name="description" content="Guarda slides, guide e verifiche create da me.">
-    <link rel="canonical" href="http://mauriziominieri.it/">
-    <link rel="publisher" href="http://mauriziominieri.it/">
-    <meta property="og:locale" content="it_IT">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="Guarda slides, guide e verifiche create da me.">
-    <meta property="og:description" content="Guarda slides, guide e verifiche create da me.">
-    <meta property="og:url" content="https://www.facebook.com/maurizio.minieri">
-    <meta property="og:site_name" content="Maurizio Minieri">
-    <meta property="article:publisher" content="http://mauriziominieri.it/">
-    <meta property="article:author" content="https://www.facebook.com/maurizio.minieri">
+    <meta content="Maurizio Minieri" name="title">
+    <meta content="Tutto su Maurizio Minieri: slides, verifiche, le mie classi e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere." name="description">
+    <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
+    <meta content="IE=11;IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="thumbnail" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" />
+    <!--  <meta name="thumbnail" content="https://www.maurizio.com/static/2016/img/share/andy-peace.png" />-->
+    <meta itemprop="name" content="MaurizioMinieri">
+    <meta itemprop="description" content="Tutto su Maurizio Minieri: slides, verifiche, le mie classi e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
+    <meta itemprop="image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
+    <!--<meta itemprop="image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
+
+
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="Guarda slides, guide e verifiche create da me.">
-    <meta name="twitter:title" content="Guarda slides, guide e verifiche create da me.">
-    <meta name="twitter:site" content="@DOPPIA3MME">
-    <meta name="twitter:creator" content="@DOPPIA3MME">
-    <script type="text/javascript">console.log('PixelYourSite PRO version 7.0.3');</script>
-    <link rel="dns-prefetch" href="//a.optmnstr.com">
-    <link rel="dns-prefetch" href="//s.w.org">
-    <link rel="alternate" type="application/rss+xml" title="" href="https://">
-    <link rel="alternate" type="application/rss+xml" title="" href="https://">
+    <meta name="twitter:site" content="@doppiaemme94">
+    <meta name="twitter:title" content="MaurizioMinieri">
+    <meta name="twitter:description" content="Tutto su Maurizio Minieri: slides, verifiche, le mie classi e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
+
+    <meta name="twitter:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
+    <!--<meta name="twitter:image" content="https://www.maurizio.com/static/2016/img/share/andy-sm.png">-->
+    <meta name="twitter:url" content="index.html">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MaurizioMinieri">
+    <meta property="og:description" content="Tutto su Maurizio Minieri: slides, verifiche, le mie classi e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
+    <meta property="og:url" content="index.html">
+    <meta property="og:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
+    <!--<meta property="og:image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
+    <meta property="og:site_name" content="MaurizioMinieri">
+    <meta property="og:locale" content="it_IT">
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Website",
+          "url": "http://www.mauriziominieri.it",
+          "publisher": {
+            "@type": "Organization",
+            "name": "Android",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "http://www.mauriziominieri.it/static/2020/img/icons/logoM.png",
+              "height": 103,
+              "width": 100
+            },
+            "parentOrganization": "Google, Inc"
+          },
+          "name": "MaurizioMinieri",
+          "description": "Tutto su Maurizio Minieri: slides, verifiche, le mie classi e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.",
+          "sameAs": [
+            "https://www.instagram.com/doppia3mme/",
+            //"https://www.youtube.com/user/GoogleMobile",
+            "https://www.facebook.com/maurizio.minieri"
+            //"https://www.twitter.com/android",
+            //"https://officialandroid.blogspot.com/"
+          ]
+        }
+    </script>
+    <link href="index.html" rel="canonical">
 
 
 
