--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
 
     <meta content="Maurizio Minieri" name="title">
-    <meta content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere." name="description">
+    <meta content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere." name="description">
     <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
     <meta content="IE=11;IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="thumbnail" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" />
     <!--  <meta name="thumbnail" content="https://www.maurizio.com/static/2016/img/share/andy-peace.png" />-->
     <meta itemprop="name" content="MaurizioMinieri">
-    <meta itemprop="description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
+    <meta itemprop="description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
     <meta itemprop="image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta itemprop="image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
 
@@ -108,7 +108,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@doppiaemme94">
     <meta name="twitter:title" content="MaurizioMinieri">
-    <meta name="twitter:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
+    <meta name="twitter:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
 
     <meta name="twitter:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta name="twitter:image" content="https://www.maurizio.com/static/2016/img/share/andy-sm.png">-->
@@ -116,7 +116,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="MaurizioMinieri">
-    <meta property="og:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.">
+    <meta property="og:description" content="Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.">
     <meta property="og:url" content="index.html">
     <meta property="og:image" content="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png">
     <!--<meta property="og:image" content="https://www.maurizio.com/static/2016/img/share/andy-lg.png">-->
@@ -139,7 +139,7 @@
             "parentOrganization": "Google, Inc"
           },
           "name": "MaurizioMinieri",
-          "description": "Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per avere tutte le informazioni che desideri sapere.",
+          "description": "Tutto su Maurizio Minieri: presentazione, competenze, le mie pubblicazioni e tanto altro. Visita il mio sito per ricevere tutte le informazioni che desideri avere.",
           "sameAs": [
             "https://www.instagram.com/doppia3mme/",
             //"https://www.youtube.com/user/GoogleMobile",
@@ -159,14 +159,16 @@
      <link rel="alternate" hreflang="en-HK" href="https://www.android.com/intl/en_hk/"/>
      <link rel="alternate" hreflang="en-IE" href="https://www.android.com/intl/en_ie/"/>
      <link rel="alternate" hreflang="en-IN" href="https://www.android.com/intl/en_in/"/>
-     <link rel="alternate" hreflang="en-NZ" href="https://www.android.com/intl/en_nz/"/>
-     <link rel="alternate" hreflang="en-US" href="https://www.android.com/"/>
-     <link rel="alternate" hreflang="es-ES" href="https://www.android.com/intl/es_es/"/>
+     <link rel="alternate" hreflang="en-NZ" href="https://www.android.com/intl/en_nz/"/>-->
+     <link rel="alternate" hreflang="en-US" href="http://www.mauriziominieri.it/en/"/>
+    <!-- <link rel="alternate" hreflang="es-ES" href="https://www.android.com/intl/es_es/"/>
      <link rel="alternate" hreflang="es-MX" href="https://www.android.com/intl/es-419_mx/"/>
      <link rel="alternate" hreflang="fr-CA" href="https://www.android.com/intl/fr_ca/"/>
      <link rel="alternate" hreflang="fr-FR" href="https://www.android.com/intl/fr_fr/"/>
      <link rel="alternate" hreflang="id-ID" href="https://www.android.com/intl/id_id/"/>
-     <link rel="alternate" hreflang="it-IT" href="index.html"/>
+   -->
+     <link rel="alternate" hreflang="it-IT" href="http://www.mauriziominieri.it/"/>
+     <!--
      <link rel="alternate" hreflang="nl-NL" href="https://www.android.com/intl/nl_nl/"/>
      <link rel="alternate" hreflang="nb-NO" href="https://www.android.com/intl/no_no/"/>
      <link rel="alternate" hreflang="pl-PL" href="https://www.android.com/intl/pl_pl/"/>
