languages try added

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <form class="c-select">
     <label class="u-is-hidden-visually" for="language-selector-header-index">Lingue</label>
     <select id="language-selector-header-index" data-c-analytics-dropdown data-ca-category="language-selector" data-ca-action="changed-language">
-          <option value="/intl/en_au/" data-ca-label="it_it:en_au">Australia - English</option>
+          <!--<option value="/intl/en_au/" data-ca-label="it_it:en_au">Australia - English</option>
           <option value="/intl/pt-BR_br/" data-ca-label="it_it:pt_br">Brasil - português</option>
           <option value="/intl/en_ca/" data-ca-label="it_it:en_ca">Canada - English</option>
           <option value="/intl/fr_ca/" data-ca-label="it_it:fr_ca">Canada - français</option>
@@ -544,9 +544,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <option value="/intl/en_hk/" data-ca-label="it_it:en_hk">Hong Kong SAR China - English</option>
           <option value="/intl/en_in/" data-ca-label="it_it:en_in">India - English</option>
           <option value="/intl/id_id/" data-ca-label="it_it:id_id">Indonesia - Indonesia</option>
-          <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>
-          <option value="/intl/it_it/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
-          <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
+          <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>-->
+          <option value="/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
+        <!--  <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
           <option value="/intl/nl_nl/" data-ca-label="it_it:nl_nl">Nederland - Nederlands</option>
           <option value="/intl/en_nz/" data-ca-label="it_it:en_nz">New Zealand - English</option>
           <option value="/intl/no_no/" data-ca-label="it_it:nb_no">Norge - norsk bokmål</option>
@@ -554,15 +554,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <option value="/intl/pt_pt/" data-ca-label="it_it:pt_pt">Portugal - português</option>
           <option value="/intl/sv_se/" data-ca-label="it_it:sv_se">Sverige - svenska</option>
           <option value="/intl/tr_tr/" data-ca-label="it_it:tr_tr">Türkiye - Türkçe</option>
-          <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>
-          <option value="/intl/en_us/" data-ca-label="it_it:en_us">United States - English</option>
-          <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
+          <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>-->
+          <option value="/lang/en_us/" data-ca-label="it_it:en_us">United States - English</option>
+      <!--    <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
           <option value="/intl/th_th/" data-ca-label="it_it:th_th">ไทย - ไทย</option>
           <option value="/intl/zh-CN_cn/" data-ca-label="it_it:zh_cn">中国 - 中文</option>
           <option value="/intl/zh-HK_hk/" data-ca-label="it_it:zh_hk">中華人民共和國香港特別行政區 - 中文</option>
           <option value="/intl/zh-TW_tw/" data-ca-label="it_it:zh_tw">台灣 - 中文</option>
           <option value="/intl/ja_jp/" data-ca-label="it_it:ja_jp">日本 - 日本語</option>
-          <option value="/intl/ko_kr/" data-ca-label="it_it:ko_kr">대한민국 - 한국어</option>
+          <option value="/intl/ko_kr/" data-ca-label="it_it:ko_kr">대한민국 - 한국어</option>-->
     </select>
   </form>
 </div>    </div>
@@ -6456,7 +6456,7 @@ aria-label="auto"data-ca-label="auto">
   <form class="c-select">
     <label class="u-is-hidden-visually" for="language-selector-footer-index">Lingue</label>
     <select id="language-selector-footer-index" data-c-analytics-dropdown data-ca-category="language-selector" data-ca-action="changed-language">
-          <option value="/intl/en_au/" data-ca-label="it_it:en_au">Australia - English</option>
+        <!--  <option value="/intl/en_au/" data-ca-label="it_it:en_au">Australia - English</option>
           <option value="/intl/pt-BR_br/" data-ca-label="it_it:pt_br">Brasil - português</option>
           <option value="/intl/en_ca/" data-ca-label="it_it:en_ca">Canada - English</option>
           <option value="/intl/fr_ca/" data-ca-label="it_it:fr_ca">Canada - français</option>
@@ -6467,9 +6467,9 @@ aria-label="auto"data-ca-label="auto">
           <option value="/intl/en_hk/" data-ca-label="it_it:en_hk">Hong Kong SAR China - English</option>
           <option value="/intl/en_in/" data-ca-label="it_it:en_in">India - English</option>
           <option value="/intl/id_id/" data-ca-label="it_it:id_id">Indonesia - Indonesia</option>
-          <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>
-          <option value="/intl/it_it/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
-          <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
+          <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>-->
+          <option value="/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
+        <!--  <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
           <option value="/intl/nl_nl/" data-ca-label="it_it:nl_nl">Nederland - Nederlands</option>
           <option value="/intl/en_nz/" data-ca-label="it_it:en_nz">New Zealand - English</option>
           <option value="/intl/no_no/" data-ca-label="it_it:nb_no">Norge - norsk bokmål</option>
@@ -6477,15 +6477,15 @@ aria-label="auto"data-ca-label="auto">
           <option value="/intl/pt_pt/" data-ca-label="it_it:pt_pt">Portugal - português</option>
           <option value="/intl/sv_se/" data-ca-label="it_it:sv_se">Sverige - svenska</option>
           <option value="/intl/tr_tr/" data-ca-label="it_it:tr_tr">Türkiye - Türkçe</option>
-          <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>
-          <option value="/intl/en_us/" data-ca-label="it_it:en_us">United States - English</option>
-          <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
+          <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>-->
+          <option value="/lang/en_us/" data-ca-label="it_it:en_us">United States - English</option>
+      <!--    <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
           <option value="/intl/th_th/" data-ca-label="it_it:th_th">ไทย - ไทย</option>
           <option value="/intl/zh-CN_cn/" data-ca-label="it_it:zh_cn">中国 - 中文</option>
           <option value="/intl/zh-HK_hk/" data-ca-label="it_it:zh_hk">中華人民共和國香港特別行政區 - 中文</option>
           <option value="/intl/zh-TW_tw/" data-ca-label="it_it:zh_tw">台灣 - 中文</option>
           <option value="/intl/ja_jp/" data-ca-label="it_it:ja_jp">日本 - 日本語</option>
-          <option value="/intl/ko_kr/" data-ca-label="it_it:ko_kr">대한민국 - 한국어</option>
+          <option value="/intl/ko_kr/" data-ca-label="it_it:ko_kr">대한민국 - 한국어</option>-->
     </select>
   </form>
 </div>  </nav>
