--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1316,8 +1316,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
               <p class="cta-grid__copy-item text-normal cascade-text__item">
 
-                Ciao, mi presento, sono Maurizio Minieri.<br><br>
-                Fin da piccolo mi ha sempre incuriosito il meccanismo che risiede nelle cose, ero il bambino che smontava i propri giocattoli costosi per vedere come funzionavano piuttosto
+                Hy, I introduce myself, I am Maurizio Minieri.<br><br>
+                I have always been intrigued by the mechanism that resides in things since I was a child, I was the kid who disassembled his expensive toys per vedere come funzionavano piuttosto
                 che usarli, inoltre la grande passione per i videogiochi negli anni è cresciuta sempre più
                 e dopo aver frequentato un liceo scientifico sperimentale mi sono iscritto all'università di Napoli Federico II, immergendomi in questo vasto e fantastico mondo: <b class="">L'INFORMATICA</b>.
                 Mi incuriosisce e affascina come essa possa essere presente in ogni oggetto della vita, immagino un futuro con
