--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
      <link rel="alternate" hreflang="en-IE" href="https://www.android.com/intl/en_ie/"/>
      <link rel="alternate" hreflang="en-IN" href="https://www.android.com/intl/en_in/"/>
      <link rel="alternate" hreflang="en-NZ" href="https://www.android.com/intl/en_nz/"/>-->
-     <link rel="alternate" hreflang="en-US" href="http://www.mauriziominieri.it/en/"/>
+     <link rel="alternate" hreflang="en-US" href="http://www.mauriziominieri.it/lang/en_us"/>
     <!-- <link rel="alternate" hreflang="es-ES" href="https://www.android.com/intl/es_es/"/>
      <link rel="alternate" hreflang="es-MX" href="https://www.android.com/intl/es-419_mx/"/>
      <link rel="alternate" hreflang="fr-CA" href="https://www.android.com/intl/fr_ca/"/>
