--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -545,8 +545,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <option value="/intl/en_in/" data-ca-label="it_it:en_in">India - English</option>
           <option value="/intl/id_id/" data-ca-label="it_it:id_id">Indonesia - Indonesia</option>
           <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>-->
-
-            <option value="/lang/en_us/" data-ca-label="it_it:en_us">United States - English</option>
+          <option value="/" data-ca-label="it_it:it_it">Italia - italiano</option>
         <!--  <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
           <option value="/intl/nl_nl/" data-ca-label="it_it:nl_nl">Nederland - Nederlands</option>
           <option value="/intl/en_nz/" data-ca-label="it_it:en_nz">New Zealand - English</option>
@@ -556,7 +555,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <option value="/intl/sv_se/" data-ca-label="it_it:sv_se">Sverige - svenska</option>
           <option value="/intl/tr_tr/" data-ca-label="it_it:tr_tr">Türkiye - Türkçe</option>
           <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>-->
-        <option value="/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
+          <option value="/lang/en_us/" selected data-ca-label="it_it:en_us">United States - English</option>
       <!--    <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
           <option value="/intl/th_th/" data-ca-label="it_it:th_th">ไทย - ไทย</option>
           <option value="/intl/zh-CN_cn/" data-ca-label="it_it:zh_cn">中国 - 中文</option>
@@ -6469,7 +6468,7 @@ aria-label="auto"data-ca-label="auto">
           <option value="/intl/en_in/" data-ca-label="it_it:en_in">India - English</option>
           <option value="/intl/id_id/" data-ca-label="it_it:id_id">Indonesia - Indonesia</option>
           <option value="/intl/en_ie/" data-ca-label="it_it:en_ie">Ireland - English</option>-->
-            <option value="/lang/en_us/" data-ca-label="it_it:en_us">United States - English</option>
+          <option value="/" data-ca-label="it_it:it_it">Italia - italiano</option>
         <!--  <option value="/intl/es-419_mx/" data-ca-label="it_it:es_mx">México - español</option>
           <option value="/intl/nl_nl/" data-ca-label="it_it:nl_nl">Nederland - Nederlands</option>
           <option value="/intl/en_nz/" data-ca-label="it_it:en_nz">New Zealand - English</option>
@@ -6479,7 +6478,7 @@ aria-label="auto"data-ca-label="auto">
           <option value="/intl/sv_se/" data-ca-label="it_it:sv_se">Sverige - svenska</option>
           <option value="/intl/tr_tr/" data-ca-label="it_it:tr_tr">Türkiye - Türkçe</option>
           <option value="/intl/en_uk/" data-ca-label="it_it:en_gb">United Kingdom - English</option>-->
-        <option value="/" selected data-ca-label="it_it:it_it">Italia - italiano</option>
+          <option value="/lang/en_us/" selected data-ca-label="it_it:en_us">United States - English</option>
       <!--    <option value="/intl/ru_ru/" data-ca-label="it_it:ru_ru">Россия - русский</option>
           <option value="/intl/th_th/" data-ca-label="it_it:th_th">ไทย - ไทย</option>
           <option value="/intl/zh-CN_cn/" data-ca-label="it_it:zh_cn">中国 - 中文</option>
