--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -2352,7 +2352,7 @@ data-ca-label="tv">
 
                 >
 
-                  <h3>I tre colossi.</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
+                  <h3>The three giants.</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
               <use xlink:href="#ico-arrow-round"></use>
               </svg></button>
               </div>
