didattica references fixed

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </button>
 </form>      <ul role="menubar">
                 <li class="">
-              <a href="http://www.mauriziominieri.it/didattica.html" role="menuitem" tabindex="0" data-g-event="main-navigation" data-g-action="clicked" data-g-label="phones">
+              <a href="http://www.mauriziominieri.it/didattica/" role="menuitem" tabindex="0" data-g-event="main-navigation" data-g-action="clicked" data-g-label="phones">
               <span class="c-nav__icon u-from-desktop-is-hidden">  <svg aria-hidden="false" aria-label="Telefoni" class="icon icon--svg icon--phone" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
               <path d="M16 1H8C6.34 1 5 2.34 5 4v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V4c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3H6.75V4h10.5v14z"/>
               <path d="M0 0h24v24H0z" fill="none"/>
@@ -1377,7 +1377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--FINE LISTA-->
                 <br>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
-                Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica.html">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
+                Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
                 le foto con i miei studenti.
                 <br>
                 <p class="cta-grid__copy-item is-copy">"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together they are powerful beyond imagination." <br> Albert Einstein.</p>
@@ -2968,7 +2968,7 @@ data-ca-label="tv">
                   </p>
 
 
-                    <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                    <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                        data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                        Leggi la slide<svg class="icon--svg cta__icon" aria-hidden="true">
                     <use xlink:href="#ico-arrow-large"></use>
@@ -3040,7 +3040,7 @@ data-ca-label="tv">
                     caratterizzati da dimensioni compatte e che utilizzano come input principale uno schermo controllato da una penna o tramite dita invece che una tastiera e un mouse.
                     Durante il periodo alla Apple Academy ho usato iPad e iPadPro e mi sono trovato molto bene. Indispensabili per chi non possiede un MacBook
                         </p>
-                        <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                        <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                            data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                            Leggi la slide<svg class="icon--svg cta__icon" aria-hidden="true">
                         <use xlink:href="#ico-arrow-large"></use>
@@ -3075,7 +3075,7 @@ data-ca-label="tv">
                       Il computer è indispensabile al giorno d'oggi, per tutti coloro che ci lavorano è un fedele compagno. Ho usato qualsiasi tipo di computer, fissi e portatili.
                       Al momento sto usando un computer fisso con componenti completamente scelti e montati da me e un MacBook Pro da 15 pollici.
                   </p>
-                  <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                  <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                      data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                      Leggi la slide<svg class="icon--svg cta__icon" aria-hidden="true">
                   <use xlink:href="#ico-arrow-large"></use>
