--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -991,7 +991,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--FINE LISTA-->
                 <br>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
-                In the section <a class="cta" href="http://www.mauriziominieri.it/didattica.html">TEACHING</a> you can consult slides, checks and guides created by me and see
+                In the section <a class="cta" href="http://www.mauriziominieri.it/didattica/">TEACHING</a> you can consult slides, checks and guides created by me and see
                 the pictures with my students.
                 <br>
                 <p class="cta-grid__copy-item is-copy">"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together they are powerful beyond imagination." <br> Albert Einstein.</p>
@@ -1850,7 +1850,7 @@ data-ca-label="tv">
                   </p>
 
 
-                    <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                    <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                        data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                         Read the slide<svg class="icon--svg cta__icon" aria-hidden="true">
                     <use xlink:href="#ico-arrow-large"></use>
@@ -1922,7 +1922,7 @@ data-ca-label="tv">
                     feature compact dimensions and use a pen or finger controlled screen as the main input instead of a keyboard and mouse.
                     During my time at Apple Academy I used iPad and iPadPro and I enjoyed it very much. Indispensable for those who do not have a MacBook
                         </p>
-                        <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                        <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                            data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                            Read the slide<svg class="icon--svg cta__icon" aria-hidden="true">
                         <use xlink:href="#ico-arrow-large"></use>
@@ -1957,7 +1957,7 @@ data-ca-label="tv">
                     The computer is indispensable nowadays, for all those who work with it is a faithful companion. I have used all kinds of computers, fixed and portable.
                     At the moment I'm using a desktop computer with components completely chosen and assembled by me and a 15-inch MacBook Pro.
                   </p>
-                  <a href="didattica.html" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
+                  <a href="/didattica/" class="cta cta--is-2 cascade-text__item" aria-label="See more Digital Wellbeing features:"
                      data-g-config="{'eventLabel': 'see more digital wellbeing features', 'moduleName': 'cta-content-block', 'linkUrl': '', 'eventCategory': 'module interactions', 'title': 'cta'}">
                      Read the slide<svg class="icon--svg cta__icon" aria-hidden="true">
                   <use xlink:href="#ico-arrow-large"></use>
