particles info fixed

--- a/didattica/index.html
+++ b/didattica/index.html
@@ -767,7 +767,7 @@
     </header>
 
     <div id="particles-js">
-        <p  id="particles-name" style="position:absolute; color:white;">Maurizio Minieri</p>
+        <p  id="particles-name" style="position:absolute;">Maurizio Minieri</p>
         <p id="particles-role" style="position:absolute; color:white;" class="cssanimation danceMiddle">Dottore in Informatica</p>
         <p  id="particles-university" style="position:absolute; color:white;" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
