--- a/didattica/index.html
+++ b/didattica/index.html
@@ -752,7 +752,7 @@
               data-g-config="{'eventLabel': 'united states', 'moduleName': 'header', 'eventCategory': 'navigation', 'title': 'country dropdown'}"
 
             >
-            United States - English
+            Italia - Italiano
         </select>
             <svg class="icon--svg language-selector__icon" aria-hidden="true">
         <use xlink:href="#ico-arrow-round"></use>
