--- a/index.html
+++ b/index.html
@@ -6505,6 +6505,18 @@ aria-label="auto"data-ca-label="auto">
     </div>
     <ul class="l-footer__social">
       <li>
+        <a href="mailto:mauminieri@gmail.com/" rel="nooopener" aria-label="Scoprimi su Linkedin" target="_blank" title="Mandami una mail" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="mail">
+
+        <svg aria-hidden="true" role="presentation" class="icon icon--svg icon--social icon--linkedin" xmlns="http://www.w3.org/2000/svg" width="32" height="42" viewBox="0 0 50 50">
+          <path fill="#e0e0e0" d="M5.5,40.5h37c1.933,0,3.5-1.567,3.5-3.5V11c0-1.933-1.567-3.5-3.5-3.5h-37C3.567,7.5,2,9.067,2,11v26C2,38.933,3.567,40.5,5.5,40.5z"/><path fill="#d9d9d9" d="M26,40.5h16.5c1.933,0,3.5-1.567,3.5-3.5V11c0-1.933-1.567-3.5-3.5-3.5h-37C3.567,7.5,2,9.067,2,11L26,40.5z"/><path fill="#eee" d="M6.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L6.745,40.5z"/>
+          <path fill="#e0e0e0" d="M25.745,40.5H42.5c1.933,0,3.5-1.567,3.5-3.5V11.5L18.771,31.616L25.745,40.5z"/><path fill="#ca3737" d="M42.5,9.5h-37C3.567,9.5,2,9.067,2,11v26c0,1.933,1.567,3.5,3.5,3.5H7V12h34v28.5h1.5c1.933,0,3.5-1.567,3.5-3.5V11C46,9.067,44.433,9.5,42.5,9.5z"/>
+          <path fill="#f5f5f5" d="M42.5,7.5H24H5.5C3.567,7.5,2,9.036,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.036,44.433,7.5,42.5,7.5z"/><path fill="#e84f4b" d="M43.246,7.582L24,21L4.754,7.582C3.18,7.919,2,9.297,2,11c0,1.206,1.518,2.258,1.518,2.258L24,27.756l20.482-14.497c0,0,1.518-1.053,1.518-2.258C46,9.297,44.82,7.919,43.246,7.582z"/>
+        </svg>
+
+        </a>
+      </li>
+
+      <li>
         <a href="https://www.linkedin.com/in/maurizio-minieri-0b4992174/" rel="nooopener" aria-label="Scoprimi su Linkedin" target="_blank" title="Scoprimi su Linkedin" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="linkedin">
 
         <svg aria-hidden="true" role="presentation" class="icon icon--svg icon--social icon--linkedin" xmlns="http://www.w3.org/2000/svg" width="32" height="42" viewBox="0 0 28 24">
@@ -6523,7 +6535,7 @@ aria-label="auto"data-ca-label="auto">
       </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/doppia3mme/" rel="nooopener" aria-label="Trova Android su Instagram" target="_blank" title="Trova Android su Instagram" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="instagram">
+        <a href="https://www.instagram.com/doppia3mme/" rel="nooopener" aria-label="Guarda il mio account instagram" target="_blank" title="Guarda il mio account instagram" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="instagram">
             <svg aria-hidden="true" role="presentation" class="icon icon--svg icon--social icon--instagram" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 48 48">
     <path d="M23.9,7.1c5.5,0,6.1,0,8.3,0.1c2,0.1,3.1,0.4,3.8,0.7c0.9,0.3,1.7,0.9,2.4,1.5c0.7,0.7,1.2,1.5,1.5,2.4 c0.3,0.7,0.6,1.8,0.7,3.8c0.1,2.2,0.1,2.8,0.1,8.3s0,6.1-0.1,8.3c-0.1,2-0.4,3.1-0.7,3.8c-0.7,1.8-2.1,3.2-3.9,3.9 c-0.7,0.3-1.8,0.6-3.8,0.7c-2.2,0.1-2.8,0.1-8.3,0.1s-6.1,0-8.3-0.1c-2-0.1-3.1-0.4-3.8-0.7c-0.9-0.3-1.7-0.9-2.4-1.5 c-0.7-0.7-1.2-1.5-1.5-2.4c-0.3-0.7-0.6-1.8-0.7-3.8c-0.1-2.2-0.1-2.8-0.1-8.3s0-6.1,0.1-8.3c0.1-2,0.4-3.1,0.7-3.8 c0.3-0.9,0.9-1.7,1.5-2.4c0.7-0.7,1.5-1.2,2.4-1.5c0.7-0.3,1.8-0.6,3.8-0.7C17.8,7.1,18.5,7.1,23.9,7.1 M23.9,3.4 c-5.6,0-6.3,0-8.5,0.1c-2.2,0.1-3.7,0.4-5,1C9.1,5,7.9,5.8,6.9,6.8c-1,1-1.9,2.3-2.4,3.6c-0.5,1.3-0.9,2.8-1,5 c-0.1,2.2-0.1,2.9-0.1,8.5s0,6.3,0.1,8.5c0.1,2.2,0.4,3.7,1,5C5,38.7,5.8,40,6.9,41c1,1,2.3,1.9,3.6,2.4c1.3,0.5,2.8,0.9,5,1 c2.2,0.1,2.9,0.1,8.5,0.1s6.3,0,8.5-0.1c2.2-0.1,3.7-0.4,5-1c2.8-1.1,4.9-3.2,6-6c0.5-1.3,0.9-2.8,1-5c0.1-2.2,0.1-2.9,0.1-8.5 s0-6.3-0.1-8.5c-0.1-2.2-0.4-3.7-1-5c-0.5-1.4-1.3-2.6-2.4-3.6c-1-1-2.3-1.9-3.6-2.4c-1.3-0.5-2.8-0.9-5-1 C30.2,3.4,29.5,3.4,23.9,3.4L23.9,3.4L23.9,3.4z"/>
     <path d="M23.9,13.4c-5.8,0-10.5,4.7-10.5,10.5s4.7,10.5,10.5,10.5s10.5-4.7,10.5-10.5l0,0C34.5,18.1,29.8,13.4,23.9,13.4z M23.9,30.8c-3.8,0-6.8-3.1-6.8-6.8c0-3.8,3.1-6.8,6.8-6.8c3.8,0,6.8,3.1,6.8,6.8C30.8,27.7,27.7,30.8,23.9,30.8z"/>
@@ -6533,7 +6545,7 @@ aria-label="auto"data-ca-label="auto">
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/maurizio.minieri" rel="nooopener" aria-label="Trova Android su Facebook" target="_blank" title="Trova Android su Facebook" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="facebook">
+        <a href="https://www.facebook.com/maurizio.minieri" rel="nooopener" aria-label="Guarda il mio account Facebook" target="_blank" title="Guarda il mio account Facebook" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="facebook">
             <svg aria-hidden="true" role="presentation" class="icon icon--svg icon--social icon--facebook" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 48 48">
     <path d="M27.3098324,25.8118605 L33.7677542,25.8118605 L34.7377207,18.3676047 L27.3098324,18.3676047 L27.3098324,13.5953547 C27.3098324,11.4327209 27.8933855,9.95930233 31.0167709,9.95930233 L35,9.96003488 L35,3.27605233 C34.3109944,3.18509302 31.9465475,3 29.1955642,3 C23.4522123,3 19.5229385,6.46292442 19.5229385,12.8558372 L19.5229385,18.3677267 L13,18.3677267 L13,25.8118605 L19.5215866,25.8118605 L19.5215866,45 L27.3098324,45 L27.3098324,25.8118605 Z"></path>
   </svg>
